# pdd-game-web-rag

./: .gitignore  README.md  docker-compose.yml  package.json  start.bat  полные_pdd.rtf  штрафы_ПДД.csv
map/: city  city.map  (+4 more)
pdd-rag/: Dockerfile  Dockerfile.eval  pyproject.toml  requirements-eval.txt
pdd-rag/api/: main.py
pdd-rag/api/routes/: query.py  tts.py
pdd-rag/generation/: llm_client.py  prompt_builder.py  proxy_config.py
pdd-rag/ingestion/: pipeline.py
pdd-rag/ingestion/chunkers/: metadata.py  structural_chunker.py
pdd-rag/ingestion/loaders/: csv_loader.py  rtf_loader.py
pdd-rag/rag_eval/: README.md  __init__.py  dataset.json  llm_factory.py  metrics.py  ragas_prompts_ru.py  reference_loader.py  rejudge.py  run_ragas.py  test_metrics.py  validate_dataset.py
pdd-rag/rag_eval/results/: checkpoint_no_reranker.json  checkpoint_no_reranker_t1536.json  checkpoint_no_reranker_t800.json  checkpoint_with_reranker.json  checkpoint_with_reranker_t1536.json  checkpoint_with_reranker_t800.json  comparison_ru_20260602.txt  log_gemini25flash_n20.txt  log_groq70b_n12.txt  log_kimik2_n10.txt  log_llama4scout_n10.txt  log_mistral_n10.txt  rag_eval_20260602T031938Z_no_reranker.json  rag_eval_20260602T033841Z_no_reranker.json  (+13 more)
pdd-rag/retrieval/: embedder.py  guardrails.py  rag_pipeline.py  reranker.py  searcher.py  vector_store.py  warmup.py
pdd-rag/scripts/: compare_eval_results.py  install_eval.sh  patch_vkr_eval.py  preload_tts.py  run_eval.sh  run_full_ab_eval.ps1  run_full_ab_eval.sh
pdd-rag/tts/: abbreviations.py  declension.py  normalize.py  silero.py
(+275 files in other folders)
