[project]
name = "pdd-rag"
version = "0.1.0"
description = "RAG service for Russian traffic rules (PDD)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9,<2.12",
    "striprtf>=0.0.26",
    "pandas>=2.2.0",
    "qdrant-client>=1.13.2",
    "sentence-transformers>=3.3.0",
    "numpy>=2.0.0",
    "groq>=0.11.0",
    "google-genai>=1.0.0",
    "openai>=1.0.0",
    "tenacity>=9.0.0",
    "tiktoken>=0.8.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "num2words>=0.5.14",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.8.0"]
eval = [
    "ragas==0.2.14",
    "datasets>=3.0.0,<5",
    "langchain-openai>=0.2.0",
    "langchain-groq>=0.2.0",
]

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ingestion*", "retrieval*", "generation*", "api*", "tts*", "rag_eval*"]
